<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Suhana Fmcg</string>

    <!--Live URL string-->
    <!--<string name="serviceAPIURL">http://suhanaagro.in/service/Service.asmx/</string>-->
    <!--<string name="serviceAPIURL">http://www.suhanafresh.net/service/Service.asmx/</string>-->
    <string name="serviceAPIURL">http://mygoldenindia.in/SuhanaFresh_Webservice/Service.asmx/</string>
    <string name="print_bofinvoice">http://suhanafresh.net/Panel/BOF_Invoice.aspx</string>

    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_required_user_id">Please Enter Username</string>

    <!--Strings Related to Forgot Password-->
    <string name="btn_submit">Submit</string>

    <!--Strings Related to Register -->
    <string name="personal_detail">Personal Detail</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="PANno">PAN Number</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error_invalid_dob">Invalid DOB.</string>
    <string name="error_required_mobile_number">Please Enter mobile number.</string>
    <string name="error_invalid_mobile_number">Invalid Mobile Number.</string>
    <string name="error_invalid_PANno" tools:keep="@string/error_invalid_PANno">Invalid PAN Number.</string>
    <string name="error_required_password">Please Enter Password.</string>

    <!--Strings Related to InputType Digits-->
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="numberic">0123456789</string>

    <!--strings related to change password-->

    <!--Strings Related to DashBoard-->

    <!--Strings Related to Navigation Drawer-->

    <!--<string name="purchase_products">Purchase Products</string>-->

    <!--<string name="showing">(Showing 100 of %1$s records)</string>-->
    <!--txt_wb.setText(Html.fromHtml(getResources().getString(R.string.my_wallet_balance, wallet_balance)));-->

    <string name="txt_nomineedetails">Nominee Details</string>
    <string name="txt_city">City</string>
    <string name="txt_bankName">Bank Name</string>
    <string name="txt_bankAcntNumber">Bank A/C No.</string>
    <string name="txt_bankIfsc">Bank IFSC</string>
    <string name="txt_bankBranch">Bank Branch</string>
    <string name="txt_nomineeRelation">Nominee Relation</string>

    <!--Welcome Letter string-->

    <!-- logout message -->
    <string name="txt_signout_message">Are you sure you want to logout ?</string>
    <string name="txt_signout_yes">Yes</string>
    <string name="txt_signout_no">No</string>
    <string name="txt_networkAlert">No Network Connectivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="selectPrefix">
        <item>Mr.</item>
    </string-array>

    <!--Strings Related to Home Screen-->
    <!--Section 1-->

    <!--UpdateProfile Screen string-->
    <string name="hint_txt_pinCode">Pin Code</string>
    <string name="hint_txt_nomineeName">Nominee Name</string>
    <string name="txt_bankInfo">Bank Detail</string>

    <!--Change Password Screen string-->

    <string name="error_et_mr_address">Please Enter address.</string>
    <string name="error_et_Ifsc" tools:keep="@string/error_et_Ifsc">Please Enter IFSC code.</string>
    <string name="error_et_mr_Ifsc" tools:keep="@string/error_et_mr_Ifsc">Invalid IFSC code.</string>
    <string name="error_et_mr_PINno">Invalid PIN code.</string>


    <string name="action_settings">Settings</string>
    <string name="print_plugin_manager">Print Plugin Manager</string>
    <string name="print_plugin_manager_description">Help users install their printers PSP</string>
    <string name="print_help_menu">Print Help Menu</string>
    <string name="print_help_menu_description">Provide help content within your application</string>
    <string name="custom_data_title">Please enter the custom data below</string>
    <string name="custom_data_tag">Tag</string>
    <string name="custom_data_value">Value</string>
    <string name="layout_option">PAGE LAYOUT</string>
    <string name="layout_center">Center</string>
    <string name="layout_center_top">Center Top</string>
    <string name="layout_crop">Fill</string>
    <string name="layout_fit">Fit</string>
    <string name="layout_top_left">Top Left</string>
    <string name="margin_option">PAGE MARGINS</string>
    <string name="layout_with_margin"><![CDATA[&#189; Inch]]></string>
    <string name="layout_without_margin">None</string>
    <string name="layout_with_top_margin">Top Only</string>
    <string name="metrics_option">METRICS</string>
    <string name="unique_device_id_per_app">UNIQUE DEVICE ID</string>
    <string name="lib_font">fonts/HPSimplified_Rg.ttf</string>
    <string name="not_encrypted">Not Encrypted</string>
    <string name="unique_per_app">Unique Per App</string>
    <string name="unique_per_vendor">Unique Per Vendor</string>

    <!--strings related to change password-->
    <string name="error_required_old_password">Please Enter Old Password.</string>
    <string name="error_required_new_password">Please Enter New Password.</string>
    <string name="error_required_confirm_password">Please Enter Confirm Password.</string>

    <string name="password_mismatch">Confirm Password &amp; New Password should be same.</string>

    <string name="error_required_pass_type">Please Select Password type.</string>

    <!--    Image Url For Dashboard     -->

    <string name="dash_slider_1">http://www.suhanafresh.net/design_img/slide-1.jpg</string>
    <string name="dash_slider_2">http://www.suhanafresh.net/design_img/slide-2.jpg</string>
    <string name="dash_slider_3">http://www.suhanafresh.net/design_img/slide-4.jpg</string>
    <string name="dash_slider_4">http://www.suhanafresh.net/design_img/slide-3.jpg</string>


</resources>