<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="@drawable/hot_product_bg_round_rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_green_text"
            android:textSize="16sp"
            android:visibility="visible" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#dddddd" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_DialogTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:background="@drawable/bg_round_rectangle_green"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="end|center_vertical"
                    android:padding="10dp"
                    android:text="@string/btn_cancel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/enabled"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/btn_submit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>