<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.vpipl.suhanaagro.Login_Activity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:singleLine="true"
                android:text="Log In"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                tools:ignore="Deprecated,HardcodedText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/color_green_text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/opensans_regular"
                android:text="User Type"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_password_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/edittext_bottom_line"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="Franchisee"></TextView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:minHeight="52dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtxt_userid_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_bottom_line"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:minHeight="40dp"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    tools:ignore="Deprecated,HardcodedText" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="bottom" app:passwordToggleEnabled="true"
                android:minHeight="52dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtxt_password_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bottom_line"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/password"
                    android:imeActionId="12345"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="40dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    tools:ignore="Deprecated" />

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/cb_login_rememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/remember_me"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/color_text_grey" />


            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_rectangle_green"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>